--- a/SalesWebMvc/Views/Home/Contact.cshtml
+++ b/SalesWebMvc/Views/Home/Contact.cshtml
@@ -3,6 +3,7 @@
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
+<h4>@ViewData["Email"]</h4>
 
 <address>
     One Microsoft Way<br />
